force-app/main/default/objects/Planner__c/Planner__c.object-meta.xml
<CustomObject>
    <label>Planner</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>