force-app/main/default/objects/Planner__c/fields/overallExpenses__c.field-meta.xml
<CustomField>
    <fullName>overallExpenses__c</fullName>
    <label>Overall Expenses</label>
    <summarizedField>FinancialItem__c.overallCost__c</summarizedField>
    <summaryForeignKey>FinancialItem__c.plannerMD__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>