force-app/main/default/objects/Planner__c/fields/remainingBalance__c.field-meta.xml
<CustomField>
    <fullName>remainingBalance__c</fullName>
    <formula>startingBalance__c + totalContributions__c - totalDeductions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This value will present the Starting Balance with the addition of all contributions, after all deductions have been actioned.</inlineHelpText>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>