force-app/main/default/objects/Planner__c/fields/startingBalance__c.field-meta.xml
<CustomField>
    <fullName>startingBalance__c</fullName>
    <inlineHelpText>This value should be the set amount you have each month, not including bonuses, or any non-regular payments.</inlineHelpText>
    <label>Starting Balance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>