force-app/main/default/objects/Planner__c/fields/totalContributions__c.field-meta.xml
<CustomField>
    <fullName>totalContributions__c</fullName>
    <label>Total Contributions</label>
    <summarizedField>FinancialItem__c.totalContributions__c</summarizedField>
    <summaryForeignKey>FinancialItem__c.plannerMD__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>