force-app/main/default/objects/Planner__c/fields/totalDeductions__c.field-meta.xml
<CustomField>
    <fullName>totalDeductions__c</fullName>
    <label>Total Deductions</label>
    <summarizedField>FinancialItem__c.totalDeductions__c</summarizedField>
    <summaryForeignKey>FinancialItem__c.plannerMD__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>